fix(css): overflowing table
TODO: figure out a more elegant solution than inline html

--- a/site/sass/_post.scss
+++ b/site/sass/_post.scss
@@ -272,6 +272,11 @@
 	    }
 	}
 
+    .table-wrapper {
+        overflow: auto;
+        padding-bottom: 3px;
+    }
+
 	table {
 	    border-collapse: collapse;
 	    border: 2px solid;
